// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`spectral rule test can use matches 1`] = `
[
  {
    "docsLink": undefined,
    "error": "Error code: operation-description: Operation "description" must be present and non-empty string.",
    "exempted": false,
    "location": {
      "jsonPath": "/paths/~1api/get",
      "spec": "after",
    },
    "name": "Spectral always rule",
    "passed": false,
    "severity": 2,
    "type": "requirement",
    "where": "always ",
  },
  {
    "docsLink": undefined,
    "error": "Error code: operation-operationId: Operation must have "operationId".",
    "exempted": false,
    "location": {
      "jsonPath": "/paths/~1api/get",
      "spec": "after",
    },
    "name": "Spectral always rule",
    "passed": false,
    "severity": 1,
    "type": "requirement",
    "where": "always ",
  },
  {
    "docsLink": undefined,
    "error": "Error code: operation-tags: Operation must have non-empty "tags" array.",
    "exempted": false,
    "location": {
      "jsonPath": "/paths/~1api/get",
      "spec": "after",
    },
    "name": "Spectral always rule",
    "passed": false,
    "severity": 1,
    "type": "requirement",
    "where": "always ",
  },
  {
    "docsLink": undefined,
    "error": "Error code: operation-success-response: Operation must have at least one "2xx" or "3xx" response.",
    "exempted": false,
    "location": {
      "jsonPath": "/paths/~1api/get",
      "spec": "after",
    },
    "name": "Spectral always rule",
    "passed": false,
    "severity": 1,
    "type": "requirement",
    "where": "always ",
  },
]
`;

exports[`spectral rule test runs spectral rules on added 1`] = `
[
  {
    "docsLink": undefined,
    "error": "Error code: operation-description: Operation "description" must be present and non-empty string.",
    "exempted": false,
    "location": {
      "jsonPath": "/paths/~1api/get",
      "spec": "after",
    },
    "name": "Spectral added rule",
    "passed": false,
    "severity": 2,
    "type": "added",
    "where": "added ",
  },
  {
    "docsLink": undefined,
    "error": "Error code: operation-operationId: Operation must have "operationId".",
    "exempted": false,
    "location": {
      "jsonPath": "/paths/~1api/get",
      "spec": "after",
    },
    "name": "Spectral added rule",
    "passed": false,
    "severity": 1,
    "type": "added",
    "where": "added ",
  },
  {
    "docsLink": undefined,
    "error": "Error code: operation-tags: Operation must have non-empty "tags" array.",
    "exempted": false,
    "location": {
      "jsonPath": "/paths/~1api/get",
      "spec": "after",
    },
    "name": "Spectral added rule",
    "passed": false,
    "severity": 1,
    "type": "added",
    "where": "added ",
  },
  {
    "docsLink": undefined,
    "error": "Error code: operation-success-response: Operation must have at least one "2xx" or "3xx" response.",
    "exempted": false,
    "location": {
      "jsonPath": "/paths/~1api/get",
      "spec": "after",
    },
    "name": "Spectral added rule",
    "passed": false,
    "severity": 1,
    "type": "added",
    "where": "added ",
  },
]
`;

exports[`spectral rule test runs spectral rules on addedOrChanged 1`] = `
[
  {
    "docsLink": undefined,
    "error": "Error code: this-rule: readOnly is not supported by API Gateway",
    "exempted": false,
    "location": {
      "jsonPath": "/paths/~1api/get/responses/200/content/application~1json/schema/properties/example",
      "spec": "after",
    },
    "name": "Spectral addedOrChanged rule",
    "passed": false,
    "severity": 2,
    "type": "addedOrChanged",
    "where": "addedOrChanged ",
  },
]
`;
